modified:   PROJECT_FINAL_STATUS.md 	modified:   README.md 	modified:   README_FINAL.md 	modified:   index.html 	modified:   package.json 	modified:   src/components/seo/SEOHead.tsx 	modified:   src/components/ui/PremiumLoadingScreen.tsx 	modified:   src/lib/aiService.ts 	modified:   src/lib/api.ts 	modified:   src/lib/hybridAIService.ts 	modified:   src/lib/storageService.ts 	modified:   src/pages/Dashboard.tsx 	modified:   src/vite-env.d.ts 	new file:   test-ollama.js

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Educational Platform with Multiple Pages</title>
+    <meta name="description" content="EduFlow - Premium AI-powered educational platform with dual AI support and responsive design" />
+    <meta name="keywords" content="eduflow, education, ai, learning, platform, gemini, gemma" />
+    <meta name="author" content="EduFlow Team" />
+    <title>EduFlow - AI Educational Platform</title>
   </head>
   <body>
     <div id="root"></div>
